src/components/lofi-beats-section/LofiBeatsSection.module.scss
.lofiBeatsSection {
  display: flex;
  flex-direction: column;
  gap: 1.6rem;

  .lofiBeatsHeader {
    display: flex;
    justify-content: space-between;

    h2 {
      font-family: 'Poppins', 'serif';
      font-size: 1.6rem;
      font-weight: 600;
    }

    .lofiBeatsTitleLightMode {
      color: #000000;
    }

    .lofiBeatsTitleDarkMode {
      color: #eaebef;
    }
  }

  .lofiDropdownSection {
    display: flex;
    gap: 0.8rem;

    .lofiDropdownContainer {
      width: 100%;

      .lofiBeatsDropdown {
        appearance: none;
        display: none;
        width: 100%;
        padding: 0.95rem 1rem;
      }

      .lofiCustomSelect {
        cursor: default;
        display: flex;
        align-items: center;
        gap: 1.2rem;
        background-color: #fafafa;
        border: 1px solid #eaebef;
        border-radius: 0.8rem;
        padding: 0.95rem 1rem;
        font-family: 'Space Mono', 'monospace';
        font-size: 1.3rem;
        transition: background-color 0.2s ease-out, border 0.2s ease-out;

        .chevronUpIcon {
          margin-left: auto;
          display: inline-block;
          transition: transform 0.2s ease-out;
        }

        .chevronFlipped {
          transform: rotate(180deg);
        }
      }

      .lofiCustomSelect:hover {
        border: 1px solid #b3b2b2;
      }

      .lofiCustomSelectDarkMode {
        background-color: #303030;
        border: 1px solid #4f4f4f;
        color: #eaebef;

        .musicIcon {
          path {
            stroke: #eaebef;
          }
        }

        .chevronUpIcon {
          path {
            stroke: #ffffff;
          }
        }
      }
      .lofiCustomSelectNoPointerEvents {
        pointer-events: none;
      }

      .lofiOptionsContainer {
        cursor: default;
        position: absolute;
        margin-top: 0.8rem;
        background-color: #fafafa;
        border: 1px solid #eaebef;
        border-radius: 0.8rem;
        display: flex;
        flex-direction: column;
        gap: 0.8rem;
        padding: 1rem;
        transition: background-color 0.2s ease-out;
        outline: none;

        .songOption {
          border-radius: 0.6rem;
          font-family: 'Space Mono', 'monospace';
          font-size: 1.3rem;
          padding: 0.6rem 1rem;
          transition: background-color 0.2s ease-out;
        }

        .songOption:hover {
          background-color: #e6e6e6;
        }

        .songOptionDarkMode:hover {
          background-color: #383838;
        }

        .activeSongOption {
          display: flex;
          align-items: center;
          justify-content: space-between;
        }

        .activeSongOption:hover {
          background-color: transparent;
        }

        .activeSongOptionDarkMode {
          svg {
            path {
              stroke: #ffffff;
            }
          }
        }
      }

      .lofiOptionsContainerDarkMode {
        background-color: #303030;
        color: #eaebef;
      }
    }

    .dicesButton {
      background-color: #fafafa;
      border: 1px solid #eaebef;
      border-radius: 0.8rem;
      min-width: 4rem;
      transition: background-color 0.2s ease-out, border 0.2s ease-out;
    }

    .dicesButton:hover {
      border: 1px solid #b3b2b2;
    }

    .dicesButtonDarkMode {
      background-color: #303030;
      border: 1px solid #4f4f4f;

      svg {
        path {
          stroke: #ffffff;
        }
      }
    }
  }
}

